# n_body_mapi

simulator/: CMakeLists.txt  README.txt  job.sh  simulation_output.txt
simulator/src/app/: initialConditions.cpp  initialConditions.hpp  simulate.cpp
simulator/src/core/: Body.cpp  Body.hpp  PhysicsEngine.cpp  PhysicsEngine.hpp  Universe.cpp  Universe.hpp
simulator/src/io/: outputWritter.cpp  outputWritter.hpp
visualizer/: README.txt  main.py  requirements.txt  setup.sh  simulation_output.txt
visualizer/data/: data_loader.py
visualizer/render/: simulation_canvas.py
visualizer/ui/: visualizer_window.py
